# Arcane_pixel

./: README.md  package-lock.json  package.json
backend/: .env.example  README.md  manage.py  pyproject.toml
backend/ArcanePixel/: asgi.py  settings.py  urls.py  wsgi.py
backend/User/: urls.py  views.py
backend/Utils/: forms.py  models.py
backend/Utils/migrations/: 0001_initial.py
