[tool.poetry]
name = "arcane-pixel"
version = "0.1.0"
description = ""
authors = ["'riisatoro' <'riisa.toro@gmail.com'>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
djangorestframework = "^3.13.1"
python-dotenv = "^0.19.2"
psycopg2-binary = "^2.9.2"
djangorestframework-simplejwt = "^5.0.0"
django-autoslug = "^1.9.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
